Adding Content, CSS, Service Page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,277 @@
 body {
-  background: linear-gradient(to left, #ccc, #999);
+  font: 15px/1.5 Arial, Helvetica, sans-serif;
+  padding: 0;
+  margin: 0;
+  background-color: #f9f9f9;
+  display: grid;
+}
+
+/* Global */
+.container {
+  width: 80%;
+  margin: auto;
+  overflow: hidden;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+}
+input {
+  border-radius: 5px;
+  font-size: 14px;
+}
+
+textarea {
+  border-radius: 5px;
+}
+.button_1 {
+  height: 38px;
+  background: #00f9ff;
+  border: none;
+  border-radius: 5px;
+  padding: 0 20px 0 20px;
+  color: #000;
+  font-size: 12px;
+  margin: auto;
+}
+.button_1:hover {
+  border: 2px solid #00f9ff;
+  transform: scale(1.05);
+  color: #35424a;
+  margin-right: 2px;
+  margin-left: 2px;
+  background: #009bb8;
+}
+
+.dark {
+  padding: 15px;
+  background: #35424a;
+  color: white;
+  margin: 10px 0 10px 0;
+}
+
+/*Header */
+header {
+  background: #35424a;
+  color: #ffffff;
+  padding: 30px 0 0 0;
+  min-height: 70px;
+  border-bottom: #00f9ff 3px solid;
+}
+
+header a {
+  color: #ffffff;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 16px;
+}
+
+header li {
+  display: inline;
+  padding: 0 20px 0 20px;
+}
+
+header #branding {
+  float: left;
+}
+
+header #branding h1 {
+  margin: 0;
+}
+
+header nav {
+  float: right;
+  margin-top: 10px;
+  margin-bottom: 50px;
+}
+
+header .highlight,
+header .current a {
+  color: #00f9ff;
+  font-weight: bold;
+}
+
+header a:hover {
+  color: #cccccc;
+  font-weight: bold;
+}
+
+/* Showcase */
+#showcase {
+  min-height: 400px;
+  background-image: url("../img/showcase2.jpg");
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-position: center;
+  text-align: center;
+  color: #fff;
+}
+
+#showcase h1 {
+  margin-top: 100px;
+  font-size: 55px;
+  margin-bottom: 10px;
+  text-shadow: 0px 0px 20px #000;
+}
+
+#showcase p {
+  font-size: 20px;
+}
+
+#newsletter {
+  padding: 15px;
+  background: #35424a;
+  color: #fff;
+}
+
+#newsletter h1 {
+  float: left;
+}
+
+#newsletter form {
+  margin-top: 15px;
+  float: right;
+}
+
+#newsletter input[type="email"] {
+  padding: 4px;
+  height: 25px;
+  width: 250px;
+}
+
+#boxes {
+  margin: 20px 0 0 0;
+  background: linear-gradient(#f9f9f9, #ccc, #ccc, #f9f9f9);
+}
+
+#boxes .box {
+  float: left;
+  text-align: center;
+  width: 30%;
+  padding: 10px;
+}
+
+#boxes .box img {
+  width: 130px;
+}
+#boxes .box #cssLogo {
+  width: 90px;
+}
+#boxes .box #alienLogo {
+  width: 110px;
+}
+
+img:hover {
+  padding-top: 25px;
+  transform: scale(1.05);
+}
+
+.altPagesHeader {
+  background: #009bb8;
+  color: #35424a;
+}
+
+.altPagesHeader a {
+  color: #35424a;
+}
+
+/* Main-Column */
+article#main-col {
+  float: left;
+  width: 65%;
+}
+
+/* Sidebar */
+aside#sidebar {
+  float: right;
+  width: 30%;
+  margin-top: 10px;
+}
+
+aside#sidebar .quote input,
+aside#sidebar .quote textarea {
+  width: 90%;
+  padding: 5px;
+}
+
+aside div:hover {
+  background: #666;
+  border: #35424c 2px solid;
+}
+
+/* Services */
+ul#services li {
+  list-style: none;
+  padding: 20px;
+  border: #cccccc solid 1px;
+  /* margin-right: 25px; */
+  margin-bottom: 5px;
+  background: #e6e6e6;
+}
+
+.page-title {
+  font-size: 28px;
+}
+
+/* Footer */
+footer {
+  padding: 20px;
+  margin: 20px 0 0 0;
+  color: #ffffff;
+  background-color: #009bb8;
+  text-align: center;
+}
+
+/* Media Queries */
+@media (max-width: 800px) {
+  header #branding,
+  header nav,
+  header nav li,
+  #newsletter h1,
+  #newsletter form,
+  #boxes .box,
+  article#main-col,
+  aside#sidebar {
+    float: none;
+    text-align: center;
+    width: 100%;
+    margin: auto;
+  }
+
+  .services {
+    margin: 0;
+  }
+
+  header {
+    padding-bottom: 20px;
+  }
+
+  #showcase h1 {
+    margin-top: 40px;
+  }
+
+  #newsletter button {
+    display: block;
+    width: 90%;
+    margin: auto;
+    transform: none;
+  }
+
+  .quote button {
+    display: block;
+    width: 100%;
+    margin: 0;
+    transform: none;
+  }
+
+  #newsletter form input[type="email"] {
+    width: 100%;
+    margin-bottom: 5px;
+    border-radius: 0px;
+  }
+
+  input {
+    border-radius: 5px;
+  }
 }
